fix header auto stretch

--- a/assets/800.css
+++ b/assets/800.css
@@ -164,21 +164,19 @@
 
 .logo_header_bar {
     float: left;
-    margin-left: 20px;
     display: inline-block;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
     z-index: 10000;
     vertical-align: middle;
-    padding: 0;
-    width: 250px;
+    padding: 0 20px;
+    width: 290px;
+    box-sizing: border-box;
 }
 
 .header_logo {
-  width: 250px;
-  height:50px;
-  background-image: url("logo.png");
+  width: 100%;
   background-size: contain;
   background-repeat: no-repeat;
   display: table-cell;;
@@ -192,21 +190,48 @@
     top: 50%;
     left: 290px;
     transform: translate(0%, -50%);
-    min-width: 400px;
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .social_img_small {
     width: 30px;
     height: 30px;
-    display: inline-block;
+    display: block;
+
+    border-radius: 50%;
+    background: white;
+
+    /*
     object-fit: contain;
-    margin-left: 10px;
-    margin-right: 10px;
     background-image: url("circle.png");
     background-size: contain;
     background-repeat: no-repeat;
+    */
+
     z-index: 1000;
 }
+
+@media only screen and (max-width: 900px) {
+
+  .logo_header_bar {
+    width: 50%;
+    max-width: 250px;
+  }
+
+  #social_container_small {
+    left: auto;
+    right: 0;
+    max-width: 50%;
+    padding-right: 20px;
+    padding-left: 10px;
+  }
+
+  .social_img_small {
+  }
+}
+
 
 .menu_header_bar {
     float: right;
