--- a/assets/main.css
+++ b/assets/main.css
@@ -246,9 +246,6 @@ body {
     .footer {
         display: none;
     }
-    #social_container_small {
-        display: none;
-    }
 }
 
 .bottom_tab_wrapper {
